# sphincs_plus_flutter

./: .gitmodules  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/sphincs_plus_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: base_functions.dart  edge_cases.dart  integrity_check.dart  performance.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: sphincs_plus.podspec
ios/Classes/: sphincs_plus.c
lib/: params.dart  sphincs_plus.dart  sphincs_plus_bindings_generated.dart
lib/src/: params.dart  sphincs_plus.dart  sphincs_plus_bindings_generated.dart  thash.dart
linux/: CMakeLists.txt
macos/: sphincs_plus.podspec
macos/Classes/: sphincs_plus.c
src/: CMakeLists.txt  sphincs_plus.c
windows/: CMakeLists.txt
